# MyGameEngine

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/: Engine.h
src/: CMakeLists.txt
